#6 - Add gradle task stopDatabaseContainer ✏️📗:octocat:

--- a/build.gradle
+++ b/build.gradle
@@ -115,3 +115,11 @@ task startDatabaseContainer(type: DockerStartContainer) {
 
     targetContainerId createDatabaseContainer.getContainerId()
 }
+
+task stopDatabaseContainer(type: DockerStopContainer) {
+    dependsOn startDatabaseContainer
+
+    onlyIf { startDatabaseContainer.didWork }
+
+    targetContainerId startDatabaseContainer.getContainerId()
+}
